--- a/render/calendar_template.html
+++ b/render/calendar_template.html
@@ -10,7 +10,7 @@
         <!-- Month -->
         <div class="align-items-center text-center"><h3 class="month font-weight-bold mb-0 text-uppercase">{month}</h3></div>
         <!-- Battery -->
-        <div class="batt_container">{battText}</div>
+        <div class="batt_container"><img class="{battText}" src="battery.png" /></div>
         <!-- Days of week -->
         <ol class="day-names list-unstyled text-center">{dayOfWeek}</ol>
         <!-- Calendar and events -->
