--- a/render/calendar_template.html
+++ b/render/calendar_template.html
@@ -8,7 +8,7 @@
     <!-- Calendar -->
     <div class="calendar shadow bg-white p-3">
         <!-- Month -->
-        <div class="align-items-center text-center"><h3 class="month font-weight-bold mb-0 text-uppercase">{month}</h3></div>
+        <div class="align-items-center text-center"><h3 class="month font-weight-bold mb-0 text-uppercase">{TodayEvent}</h3></div>
         <!-- Battery -->
         <div class="batt_container"><img class="{battText}" src="battery.png" /></div>
         <!-- Days of week -->
